<resources>
    <string name="app_name">YkOA</string>
    <string name="login_accid">用户名</string>
    <string name="login_pwd">密码</string>
    <string name="login_accidem">账号为空</string>
    <string name="login_pwdem">密码为空</string>
    <string name="login_succeed">登录成功</string>
    <string name="login_close">退出登录</string>
    <string name="login_failure">用户名或密码错误</string>
    <string name="no_network_error">与服务器通讯失败，请稍后再试</string>

    <string name="open">open</string>
    <string name="close">close</string>


    <!--Main-->
    <string name="main_fragment">首页</string>
    <string name="im_fragement">通讯</string>
    <string name="my_fragment">我的</string>

    <!-- Login -->
    <string name="login_input_name_hint">手机号码</string>
    <string name="login_input_password_hint">密码</string>
    <string name="login_btn_text">登录</string>
    <string name="login_forget_pwd_btn_text">忘记密码？</string>
    <string name="login_register_btn_text">注册新账户</string>
    <string name="login_by_third_text">第三方账号登录</string>
    <string name="login_in_process">正在登录</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_accid">accid</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
</resources>
