<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dl_left"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">
    <!--主布局-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <!--主布局-->
        <RelativeLayout
            xmlns:tabbutton="http://schemas.android.com/apk/res-auto"
            android:id="@+id/activity_main"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/home_tab_layout"
                android:layout_width="match_parent"
                android:layout_height="@dimen/len_110px"
                android:layout_alignParentBottom="true"
                android:orientation="vertical">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/len_1px"
                    android:background="@color/main_tab_top_view_color" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <com.oa.yk.ykoa.view.TabButton
                        android:id="@+id/main_tab_home"
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@null"
                        android:textSize="@dimen/text_size_24px"
                        tabbutton:icon_str="@string/main_fragment"
                        tabbutton:icon_text_margin="@dimen/len_10px"
                        tabbutton:text_color="@color/main_tab_text_unselected_color"
                        tabbutton:text_selected_color="@color/main_tab_text_selected_color" />
                        <!--tabbutton:icon_drawable="@mipmap/ic_launcher"-->
                        <!--tabbutton:icon_drawable_selected="@mipmap/ic_launcher_round"-->


                    <com.oa.yk.ykoa.view.TabButton
                        android:id="@+id/main_tab_talk"
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@null"
                        android:textSize="@dimen/text_size_24px"
                        tabbutton:icon_str="@string/im_fragement"
                        tabbutton:icon_text_margin="@dimen/len_10px"
                        tabbutton:text_color="@color/main_tab_text_unselected_color"
                        tabbutton:text_selected_color="@color/main_tab_text_selected_color" />
                        <!--tabbutton:icon_drawable="@mipmap/ic_launcher"-->
                        <!--tabbutton:icon_drawable_selected="@mipmap/ic_launcher_round"-->


                    <com.oa.yk.ykoa.view.TabButton
                        android:id="@+id/main_tab_mine"
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@null"
                        android:textSize="@dimen/text_size_24px"
                        tabbutton:icon_str="@string/my_fragment"
                        tabbutton:icon_text_margin="@dimen/len_10px"
                        tabbutton:text_color="@color/main_tab_text_unselected_color"
                        tabbutton:text_selected_color="@color/main_tab_text_selected_color" />
                        <!--tabbutton:icon_drawable="@mipmap/ic_launcher"-->
                        <!--tabbutton:icon_drawable_selected="@mipmap/ic_launcher_round"-->


                </LinearLayout>
            </LinearLayout>

            <FrameLayout
                android:id="@+id/content_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_above="@id/home_tab_layout" />

        </RelativeLayout>

        <!--<android.support.v4.widget.SwipeRefreshLayout-->
            <!--android:id="@+id/pull_swiperefresh"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="match_parent">-->

            <!--<LinearLayout-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="match_parent"-->
                <!--android:orientation="vertical">-->

                <!--<android.support.v7.widget.RecyclerView-->
                    <!--android:background="@color/back_color"-->
                    <!--android:id="@+id/group_fragment_list"-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="match_parent" />-->
            <!--</LinearLayout>-->
        <!--</android.support.v4.widget.SwipeRefreshLayout>-->
    </LinearLayout>
    <!--侧滑菜单-->
    <LinearLayout
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="#fff"
        android:orientation="vertical">

        <!--<LinearLayout-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="200dp"-->
            <!--android:background="@color/google_blue"-->
            <!--android:orientation="vertical">-->

        <!--</LinearLayout>-->

        <ListView
            android:id="@+id/lv_left_menu"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:divider="@null"
            android:text="DrawerLayout" />
    </LinearLayout>
</android.support.v4.widget.DrawerLayout>